k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: client-cluster-ip-service
spec:    
  type: ClusterIP
  selector:
     component: web
  ports:
    -  port: 3000
       targetPort: 3000
